--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,10 @@ android {
     compileSdkVersion 30
     buildToolsVersion "30.0.2"
 
+    dataBinding {
+        enabled true
+    }
+
     defaultConfig {
         applicationId "net.oucrc"
         minSdkVersion 24
